# mil_common

./: .gitignore  Jenkinsfile  README.md
drivers/blueview_driver/: CMakeLists.txt  package.xml
drivers/blueview_driver/include/: OGridGen.hpp
drivers/blueview_driver/src/: OGridGen.cpp
drivers/mil_blueview_driver/msg/: BlueViewPing.msg
drivers/mil_passive_sonar/: CMakeLists.txt  package.xml  setup.py
drivers/mil_passive_sonar/launch/: example.launch  passive_sonar_example.launch  readme.md
drivers/mil_passive_sonar/launch/config/: log.yaml  paul_board.yaml  readme.md  serial.yaml  sim.yaml
drivers/mil_passive_sonar/mil_passive_sonar/: passive_sonar_driver.py
drivers/mil_passive_sonar/msg/: Ping.msg
drivers/mil_passive_sonar/multilateration/: __init__.py  line_intersection.py  multilateration.py  multilaterator.py  time_signal_1d.py
drivers/mil_passive_sonar/nodes/: pinger_finder.py  sonar_test.py
drivers/mil_passive_sonar/passive_sonar_driver/: driver.py  passive_sonar_driver.py  receiver_array_interfaces.py
drivers/mil_passive_sonar/srv/: EstimatePingerPosition.srv  EstimatePingerPosition2D.srv  GetPulseHeading.srv  ResetPositionEstimate.srv  SaveBag.srv  SaveLog.srv  SetFrequency.srv  StartBagging.srv  StartLogging.srv
drivers/mil_passive_sonar/test/: driver_integration_test.py  mil_passive_sonar.test  multilateration_test.py
drivers/mil_usb_to_can/: CMakeLists.txt  package.xml
drivers/mil_usb_to_can/launch/: actuator.launch  example.launch  thruster_kill.launch
drivers/mil_usb_to_can/mil_usb_to_can/: __init__.py  constants.py  device.py  simulation.py
drivers/mil_usb_to_can/srv/: GetActuator.srv  SetActuator.srv
drivers/mil_usb_to_can/test/: actuator_device.test  actuator_device_test.py
gnc/mil_bounds/nodes/: bounds_from_rviz
labeling/: .main.py.swp  .tools.py.swp  __init__.py  image_providers.py  main.py  tools.py
machine_learning/: CMakeLists.txt  package.xml
machine_learning/labeling/: labeler.py  main.py  tools.py
mil_dev_tools/: CMakeLists.txt  package.xml  setup.py
mil_dev_tools/mil_dev_tools/: __init__.py  geometry_helpers.py  move_helper.py
mil_machine_learning/: CMakeLists.txt  package.xml
mil_machine_learning/labeling/: tools.py
mil_perception/: CMakeLists.txt  package.xml
mil_perception/include/mil_vision_lib/: cv_tools.hpp
mil_perception/src/mil_vision_lib/: cv_tools.cpp
perception/mil_vision/mil_vision_tools/: click_points_camera.py  click_stereo_observation.py
perception/mil_vision/ros_tools/: colorspaces.py
perception/point_cloud_object_detection_and_recognition/: CMakeLists.txt
perception/point_cloud_object_detection_and_recognition/include/point_cloud_object_detection_and_recognition/: input_cloud_filter.hpp  marker_manager.hpp  object.hpp  object_associator.hpp  object_detector.hpp  object_map.hpp  ogrid_manager.hpp  pcodar_controller.hpp  pcodar_params.hpp  pcodar_types.hpp  persistent_cloud_filter.hpp  point_cloud_builder.hpp  service_provider.hpp
perception/point_cloud_object_detection_and_recognition/launch/: pcodar.launch  pcodar.yaml
perception/point_cloud_object_detection_and_recognition/nodes/: main.cpp
perception/point_cloud_object_detection_and_recognition/src/: input_cloud_filter.cpp  marker_manager.cpp  object.cpp  object_associator.cpp  object_detector.cpp  object_map.cpp  ogrid_manager.cpp  pcodar_controller.cpp  pcodar_params.cpp  persistent_cloud_filter.cpp  point_cloud_builder.cpp  service_provider.cpp
scripts/: bash_aliases.sh  two_line_bash.sh
simulation/mil_gazebo/: CMakeLists.txt  package.xml
simulation/mil_gazebo/xacro/: sonar.xacro
utils/mil_msgs/: CMakeLists.txt  package.xml
utils/mil_msgs/msg/: PerceptionObject.msg  VelocityMeasurement.msg  VelocityMeasurements.msg
utils/mil_msgs/srv/: EstimatePingerPosition.srv  GetPulseHeading.srv
utils/mil_tools/: package.xml
utils/mil_tools/include/mil_tools/: msg_helpers.hpp  param_helpers.hpp
utils/mil_tools/mil_misc_tools/: __init__.py
utils/mil_tools/mil_ros_tools/: __init__.py  image_helpers.py  image_helpers_revamp.py  vector_to_marker
utils/mil_tools/mil_tools/: __init__.py
utils/mil_tools/nodes/: clicked_point_recorder.py  down_cam_restart.py  tf_fudger.py  video_player
utils/mil_tools/scripts/: param_sever
