<?xml version="1.0"?>
<package>
  <name>mil_dev_tools</name>
  <version>0.0.0</version>
  <description>General scripts, libraries, and tools for MIL projects</description>

  <maintainer email="kma1660@gmail.com">Kevin Allen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <export>
  </export>
</package>
