cmake_minimum_required(VERSION 2.8.3)
project(mil_machine_learning)

find_package(catkin REQUIRED)

# catkin_python_setup()

## Generate messages in the 'msg' folder
# add_message_files(
#   FILES
# )

## Generate services in the 'srv' folder
# add_service_files(
#   FILES
# )

## Generate added messages and services with any dependencies listed here
# generate_messages(
#   DEPENDENCIES
#   std_msgs  # Or other packages containing msgs
# )

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES machine_learning
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)
