<?xml version="1.0"?>
<package>
  <name>mil_machine_learning</name>
  <version>0.0.0</version>
  <description>The machine learning package for MIL</description>

  <maintainer email="matthew.langford95@gmail.com">Matt Langford</maintainer>

  <license>MIL</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
