<?xml version="1.0"?>
<package>
  <name>mil_perception</name>
  <version>0.0.0</version>
  <description>Common perception tools for MIL projects</description>
  <maintainer email="kma1660@gmail.com">Kevin Allen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
