<?xml version="1.0"?>
<package>
  <name>mil_passive_sonar</name>
  <version>1.0.0</version>
  <description>Package for multilateration and passive sonar</description>

  <maintainer email="Matthew.langford95@gmail.com">Matthew Langford</maintainer>
  <maintainer email="dsoto@ufl.edu">David Soto</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>tf2</build_depend>
  <run_depend>tf2</run_depend>

</package>
